--- a/udemy-BallemMarcio-apiRest/projeto/intelij-v02/workspace/demo-park-api/src/main/resources/application.properties
+++ b/udemy-BallemMarcio-apiRest/projeto/intelij-v02/workspace/demo-park-api/src/main/resources/application.properties
@@ -5,11 +5,16 @@ spring.mvc.locale=pt_BR
 
 # MySQL Database Connection Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_park?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_park_v2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234567
 
 # JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+# Springdoc OpenApi 3.1 & Swagger 3
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packagesToScan=com.mballem.demoparkapi.web.controller
