--- a/udemy-BallemMarcio-apiRest/projeto/intelij-v02/workspace/demo-park-api/src/main/resources/application.properties
+++ b/udemy-BallemMarcio-apiRest/projeto/intelij-v02/workspace/demo-park-api/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
 
-# MySQL Database Connection Properties
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_park_v2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=root
-spring.datasource.password=1234567
+## MySQL Database Connection Properties
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo_park_v2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+#spring.datasource.username=root
+#spring.datasource.password=1234567
 
 # JPA
 spring.jpa.show-sql=true
