--- a/prof/park-api/demo-park-api/src/main/resources/application.properties
+++ b/prof/park-api/demo-park-api/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.locale=pt_BR
 
 # MySQL Database Connection Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_park_v2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/dbpark?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=1234567
 
